--- a/messages/project.json
+++ b/messages/project.json
@@ -2,6 +2,8 @@
   "frameworks": {
     "net46": {
       "dependencies": {
+        "Microsoft.Bot.Builder": "3.5.5",
+        "Microsoft.Bot.Builder.History":"3.0.3",
         "Microsoft.Bot.Builder.Azure": "3.2.1",
         "Microsoft.Bot.Builder.CognitiveServices": "1.0.3"
       }
